--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+Version 1.2 
+-----------
+
+* Fixed bug in melt where factors were converted to integers, instead of to
+  characters
+
+* When the measured variable is a factor, `dcast` now converts it to a
+  character rather than throwing an error. `acast` still returns a factor
+  matrix. (Thanks to Brian Diggs.)
+
+* `acast` is now much faster, due to fixing a very slow way of naming the 
+   output. (Thanks to José Bartolomei Díaz for the bug report)
+
+* `value_var` argument to `acast` and `dcast` renamed to `value.var` to be
+  consistent with other argument names
+
+* Order `NA` factor levels before `(all)` when creating margins
+
+* Corrected reshape citation.
+
 Version 1.1
 -----------
 
