--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+Version 1.2.2
+-------------
+
+* Fix incompatibility with plyr 1.8
+
+* Fix evaluation bug revealed by knitr. (Fixes #18)
+
+* Fixed a bug in `melt` where it didn't automatically get variable names
+  when used with tables. (Thanks to Winston Chang)
+
 Version 1.2.1
 -------------
 
